#130 Adding option to ignore credit cards when in a Unix timestamp.